[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
ahash = { version = "0.8"}
hashbrown = { version = "0.14"}
crossterm = "0.27.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "counter"
harness = false # This tells Cargo to not use the default test harness and allows Criterion to control the execution of benchmarks.
