[package]
name = "stress"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]] # Bin to run the counter stress tests
name = "counter"
path = "src/counter.rs"
doc = false

[[bin]] # Bin to run the counter with no attributes stress tests
name = "counter_0"
path = "src/counter_0.rs"
doc = false

[[bin]] # Bin to run the counter with no random stress tests
name = "counter_no_random"
path = "src/counter_no_random.rs"
doc = false

[[bin]] # Bin to run the atomic stress tests
name = "atomic"
path = "src/atomic.rs"
doc = false

[dependencies]
ctrlc = "3.2.5"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
metrics = { path = ".." }
rand = { version = "0.8.4", features = ["small_rng"] }
num-format = "0.4.4"
